--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>joothly</title>
-  <meta name="description" content="">
+  <meta name="description" content="Only nonsense">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/main.css">
+  <!-- App icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/appicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/appicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/appicons/favicon-16x16.png">
+  <link rel="manifest" href="/appicons/site.webmanifest">
+  <link rel="mask-icon" href="/appicons/safari-pinned-tab.svg" color="#dd4422">
+  <link rel="shortcut icon" href="/appicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#dd4422">
+  <meta name="msapplication-config" content="/appicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
   <div class="page page--home">
     <h1 class="title">
-      <span class="title__letter flip">J</span>
+      <span class="title__letter flip">j</span>
       <span class="title__letter flip">o</span>
       <span class="title__letter flip">o</span>
       <span class="title__letter flip">t</span>
